Fix: background is hidden in iOS9.3 on iPhone 6* Plus when multiple tabs are open in landscape orientation, closes #1114

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -83,6 +83,7 @@
 	height: 100%;
 	background: $pswp__background-color;
 	opacity: 0;
+	transform: translateZ(0);
 	-webkit-backface-visibility: hidden;
 	will-change:opacity;
 }
